<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="upcoming_elections">Upcoming elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="representatives">Representatives</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="find_my_representatives">find my representatives</string>
    <string name="use_my_location">use my location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="election_information">Election Information</string>
    <string name="get_elections_error">Could not get the info</string>
    <!-- TODO: Add necessary string values -->

</resources>
